--- a/school/account/templates/account/login.html
+++ b/school/account/templates/account/login.html
@@ -2,9 +2,9 @@
 
 {% block title %}Đăng nhập{% endblock %}
 
-{% block navbar %}
-<li class="nav-item {{activate.login}}">
-  <a class="nav-link" href="">
+{% block navbar_left %}
+<li class="nav-item active">
+  <a class="nav-link" href="/account/login/">
     Đăng nhập
   </a>
 </li>
@@ -13,7 +13,7 @@
 {% load static %}
 
 {% block external_css %} 
-<link href="{% static "login/login.css" %}" rel="stylesheet"/>
+<link href="{% static "account/login.css" %}" rel="stylesheet"/>
 {% endblock %}
 
 {% block body %}
@@ -24,7 +24,7 @@
     <h2>Đăng nhập</h2>
     <p>Nhập tài khoản và mật khẩu</p>
   </div>
-  <form id="Login" action="/login/post" method="post"> {% csrf_token %}
+  <form id="Login" action="/account/login/post/" method="post"> {% csrf_token %}
     <div class="form-group">
       <input type="text" class="form-control" name="username"
         id="inputEmail" placeholder="Tên tài khoản">
