--- a/school/templates/base_logged_in.html
+++ b/school/templates/base_logged_in.html
@@ -7,8 +7,8 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="btn btn-primary" href="/account/logout">
-    Đăng xuất
-  </a>
+    <form style="margin: 0px; " method="post" action="/account/logout/">{% csrf_token %}
+    <button type="submit" class="btn btn-primary">Đăng xuất</button>
+  </form>
 </li>
 {% endblock %}
