--- a/school/account/templates/account/detail_normal.html
+++ b/school/account/templates/account/detail_normal.html
@@ -23,6 +23,9 @@
   <div class="panel">
     <h2>Tài khoản: {{ username }}</h2>
   </div>
+  <div class="panel">
+    <h2>Quyền: {{ privilege }}</h2>
+  </div>
 </div></div></div>
 
 <div class="container">
