--- a/school/account/templates/account/detail_normal.html
+++ b/school/account/templates/account/detail_normal.html
@@ -30,7 +30,7 @@
 
 <div class="container">
 <div class="detail-form">
-<div class="main-div">
+<div class="main-div" id="change-password">
   <div class="panel">
     <p>Thay đổi mật khẩu</p>
   </div>
